force-app/main/default/objects/Lucky_Draw_Setting__c/Lucky_Draw_Setting__c.object-meta.xml
<CustomObject>
    <label>Lucky Draw Setting</label>
    <nameField>
        <label>Lucky Draw Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lucky Draw Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>