force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Draw__c.field-meta.xml
<CustomField>
    <fullName>Draw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>已開獎</description>
    <inlineHelpText>已開獎</inlineHelpText>
    <label>Draw</label>
    <type>Checkbox</type>
</CustomField>