force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Draw_Date__c.field-meta.xml
<CustomField>
    <fullName>Draw_Date__c</fullName>
    <description>開獎日期</description>
    <inlineHelpText>開獎日期</inlineHelpText>
    <label>Draw Date</label>
    <type>Date</type>
</CustomField>