force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Draw_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Draw_Date_Today__c</fullName>
    <formula>IF(Draw_Date__c =TODAY(),TRUE,FALSE)</formula>
    <label>Draw Date Today</label>
    <type>Checkbox</type>
</CustomField>