force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Drawing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawing_End_Date__c</fullName>
    <description>活動結束日期</description>
    <inlineHelpText>活動結束日期</inlineHelpText>
    <label>Drawing End Date</label>
    <type>Date</type>
</CustomField>