force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Drawing_Name__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Name__c</fullName>
    <label>Drawing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>