force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Drawing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Start_Date__c</fullName>
    <description>活動開始日期</description>
    <inlineHelpText>活動開始日期</inlineHelpText>
    <label>Drawing Start Date</label>
    <type>Date</type>
</CustomField>