force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Drawing_URL__c.field-meta.xml
<CustomField>
    <fullName>Drawing_URL__c</fullName>
    <description>活動網頁連結</description>
    <inlineHelpText>活動網頁連結</inlineHelpText>
    <label>Drawing URL</label>
    <type>Url</type>
</CustomField>