force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Number_of_Winner__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Winner__c</fullName>
    <description>本次活動抽獎數</description>
    <inlineHelpText>本次活動抽獎數</inlineHelpText>
    <label>Number of Winner (Both)</label>
    <summarizedField>Prize__c.Prize_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Prize__c.Type__c</field>
        <operation>equals</operation>
        <value>Ticket buying experience &amp; Flight experience</value>
    </summaryFilterItems>
    <summaryForeignKey>Prize__c.Drawing_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>