force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Number_of_Winner_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Winner_Ticket__c</fullName>
    <label>Number of Winner (Ticket)</label>
    <summarizedField>Prize__c.Prize_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Prize__c.Type__c</field>
        <operation>equals</operation>
        <value>Ticket buying experience</value>
    </summaryFilterItems>
    <summaryForeignKey>Prize__c.Drawing_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>