force-app/main/default/objects/Lucky_Draw_Setting__c/fields/Other_Delivery_Rate__c.field-meta.xml
<CustomField>
    <fullName>Other_Delivery_Rate__c</fullName>
    <label>Other Delivery Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>