force-app/main/default/objects/Lucky_Draw_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Drawing_Name__c</columns>
    <columns>Drawing_Start_Date__c</columns>
    <columns>Drawing_End_Date__c</columns>
    <columns>Draw_Date__c</columns>
    <columns>Draw__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>